zetasql/parser/testdata/load.test
load data infile 'data.csv' into table foo options (charset = 'utf-8');
--
LoadDataStatement [0-70]
  StringLiteral('data.csv') [17-27]
  PathExpression [39-42]
    Identifier(foo) [39-42]
  OptionsList [51-70]
    OptionsEntry [52-69]
      Identifier(charset) [52-59]
      StringLiteral('utf-8') [62-69]
--
LOAD DATA INFILE 'data.csv' INTO TABLE foo OPTIONS(charset = 'utf-8')
==

load data infile 'data' into table db1.foo;
--
LoadDataStatement [0-42]
  StringLiteral('data') [17-23]
  PathExpression [35-42]
    Identifier(db1) [35-38]
    Identifier(foo) [39-42]
--
LOAD DATA INFILE 'data' INTO TABLE db1.foo
==

load data infile into table table1;
--
ERROR: Syntax error: Expected string literal but got keyword INTO [at 1:18]
load data infile into table table1;
                 ^
==

load data infile 'data.file' into table;
--
ERROR: Syntax error: Unexpected ";" [at 1:40]
load data infile 'data.file' into table;
                                       ^
==

# load data with config
load data infile 'data.csv' into table foo with config (charset = 'utf-8');
--
LoadDataStatement [0-74]
  StringLiteral('data.csv') [17-27]
  PathExpression [39-42]
    Identifier(foo) [39-42]
  WithConfigClause [43-74]
    OptionsList [55-74]
      OptionsEntry [56-73]
        Identifier(charset) [56-63]
        StringLiteral('utf-8') [66-73]
--
LOAD DATA INFILE 'data.csv' INTO TABLE foo WITH CONFIG(charset = 'utf-8')
==

# load data with config
load data infile 'data.csv' into table foo options (charset = 'utf-8') with config (charset = 'utf-8');
--
LoadDataStatement [0-102]
  StringLiteral('data.csv') [17-27]
  PathExpression [39-42]
    Identifier(foo) [39-42]
  OptionsList [51-70]
    OptionsEntry [52-69]
      Identifier(charset) [52-59]
      StringLiteral('utf-8') [62-69]
  WithConfigClause [71-102]
    OptionsList [83-102]
      OptionsEntry [84-101]
        Identifier(charset) [84-91]
        StringLiteral('utf-8') [94-101]
--
LOAD DATA INFILE 'data.csv' INTO TABLE foo OPTIONS(charset = 'utf-8') WITH CONFIG(charset = 'utf-8')
==
